--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.btn{
+    @apply font-semibold text-white py-2 px-4 rounded;
+}
