--- a/src/assets/tailwind/tailwind.css
+++ b/src/assets/tailwind/tailwind.css
@@ -583,9 +583,47 @@ video {
   display: none;
 }
 
+.flex {
+  display: flex;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.content-center {
+  align-content: center;
+}
+
+.content-start {
+  align-content: flex-start;
+}
+
 .bg-green-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .text-center {
@@ -606,6 +644,11 @@ video {
   color: rgba(4, 120, 87, var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
 .btn {
   border-radius: 0.25rem;
   padding-top: 0.5rem;
@@ -615,4 +658,28 @@ video {
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:content-end {
+    align-content: flex-end;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:content-center {
+    align-content: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:content-between {
+    align-content: space-between;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:content-around {
+    align-content: space-around;
+  }
 }
